--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/com/zykmanhua/app/util/GetChapterContent.java=UTF-8
 encoding//src/com/zykmanhua/app/util/GetManhuaChapterByName.java=UTF-8
