--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,6 +42,11 @@
             
         </activity>
         
+        <activity 
+            android:name="com.zykmanhua.app.activity.ContentActivity">
+            
+        </activity>
+        
     </application>
 
 </manifest>
