--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,14 +18,14 @@
     <application
         android:name="com.zykmanhua.app.activity.ZYKManhuaApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@style/MyTabTheme" >
         
         <!-- 聚合数据的必要的验证id -->
         <meta-data
             android:name="com.thinkland.juheapi.openid"
-            android:value="JHdc5c31d5ee7c2899e3c7e7b6b53483e3" />
+            android:value="" />
         
         <activity
             android:name="com.zykmanhua.app.activity.MainActivity"
@@ -44,6 +44,11 @@
         
         <activity 
             android:name="com.zykmanhua.app.activity.ContentActivity">
+            
+        </activity>
+        
+        <activity 
+            android:name="com.zykmanhua.app.activity.SearchActivity">
             
         </activity>
         
